--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,8 +1,35 @@
 /* Add your CSS below! */
+#playfield {
+    display: block;
+    margin: auto;
+    width: 400px;
+    height: 400px;
+    position: relative;
+}
+
+#shootem, #pfoverlay {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
 #shootem {
     background-color: #111;
-    cursor:crosshair;
-    display: block;
+    cursor: crosshair;
+}
+
+#pfoverlay {
+    color: white;
+    z-index: 1;
+    display: none;
+}
+
+#strtmsg {
+    position: relative;
+    top: 50%;
+    width: -webkit-max-content;
     margin: auto;
 }
 
