--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,7 +7,7 @@
     position: relative;
 }
 
-#shootem, #pfoverlay {
+#shootem, #startScreen {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -20,7 +20,7 @@
     cursor: crosshair;
 }
 
-#pfoverlay {
+#startScreen {
     color: white;
     z-index: 1;
     display: none;
